[package]
name = "oxide_boy"
version = "0.1.0"
authors = ["Adam Melnyk <adam@adammelnyk.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.21", default-features = false }
log = "0.4.14"
env_logger = "0.8.3"