[package]
name = "oxide_boy"
version = "0.1.0"
authors = ["Adam Melnyk <adam@adammelnyk.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", default-features = false }
log = "0.4.17"
env_logger = "0.10.0"
minifb = "0.24.0"
